--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,19 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --color-main-blue: var(--main-blue);
+  --color-main-red: var(--main-red);
+
+  --color-main-blue-tint1: var(--main-blue-tint1);
+  --color-main-blue-tint2: var(--main-blue-tint2);
+  --color-main-blue-tint3: var(--main-blue-tint3);
+  --color-main-blue-tint4: var(--main-blue-tint4);
+
+  --color-main-red-tint1: var(--main-red-tint1);
+  --color-main-red-tint2: var(--main-red-tint2);
+  --color-main-red-tint3: var(--main-red-tint3);
+  --color-main-red-tint4: var(--main-red-tint4);
+
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -43,6 +56,19 @@
 }
 
 :root {
+  --main-blue: #47458b;
+  --main-red: #e2343c;
+
+  --main-blue-tint1: #dadae8;
+  --main-blue-tint2: #a3a2c5;
+  --main-blue-tint3: #2b2953;
+  --main-blue-tint4: #15152a;
+
+  --main-red-tint1: #f9d6d8;
+  --main-red-tint2: #e54850;
+  --main-red-tint3: #b52a30;
+  --main-red-tint4: #5a1518;
+
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.2211 0 0);
@@ -60,8 +86,8 @@
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.7251 0 0);
-  --input: oklch(0.7251 0 0);
+  --border: var(--main-blue-tint2);
+  --input: var(--main-blue-tint2);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
@@ -79,6 +105,9 @@
 }
 
 .dark {
+  --main-blue: #47458b;
+  --main-red: #e2343c;
+
   --background: oklch(0.2211 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
