--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -154,3 +154,15 @@
 .scrollbar-width {
   scrollbar-width: thin;
 }
+
+.circle-vector-large {
+  width: 400px;
+  height: 400px;
+  background: var(--main-blue-tint2);
+  border-radius: 100%;
+
+  position: absolute;
+  bottom: 0%;
+  left: -10%;
+  opacity: 40%;
+}
